Add special walls which can represent columns